[project]
name = "comfyui-gcp-storage"
description = "Node:GCP Storage Node. Support google-cloud-storage."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Fantaxico/ComfyUI-GCP-Storage"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-GCP-Storage"
Icon = ""
